# py7zz

./: .gitignore  .pre-commit-config.yaml  7ZZ_LICENSE  API_REFACTORING_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LOCAL_CI_PLAN.md  MANIFEST.in  README.md  REUSE.toml  WINDOWS_TEST_REPORT_v1.0.0b2_DETAILED.md  integration_test.py  py7zz_api_improvement_proposal.md  pyproject.toml
.github/: labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  build.yml  check-upstream.yml  check.yml  ci.yml  codeql.yml  create-tag.yml  release-drafter.yml  release.yml  watch_release.yml
docs/: API.md  MIGRATION.md  VERSION_STRATEGY.md
py7zz/: __init__.py  async_ops.py  bundled_info.py  callbacks.py  cli.py  compression.py  config.py  core.py  detailed_parser.py  exceptions.py  logging_config.py  simple.py  streaming.py  thread_safe_config.py  updater.py  version.py
py7zz/binaries/: README.md
scripts/: check_wheel_dups.py  ci-local.sh  format-and-lint.sh  get_7zz.sh  quick-check.sh
tests/: test_add_arcname.py  test_advanced_features.py  test_archive_info.py  test_archive_info_system.py  test_async_complete_api.py  test_async_new_features.py  test_async_operations.py  test_async_ops.py  test_core.py  test_cross_platform_integration.py  test_detailed_parser.py  test_enhanced_logging.py  test_extractall_members.py  test_filename_compatibility.py  test_filename_handling_system.py  test_filename_sanitizer.py  test_layer1_advanced_functions.py  test_layer1_final.py  test_layer1_fixed.py  test_layer2_enhanced_methods.py  test_layer3_global_config.py  test_new_info_methods.py  test_pypi_version_validation.py  test_redesigned_archive_info.py  test_simple_api.py  test_simple_async.py  test_unified_exception_handling.py  test_updater.py  test_version_integration.py  test_version_management.py  test_version_system.py
