[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py7zz"]
include = [
    "py7zz/bin/**/*",
]

[tool.hatch.build.targets.wheel.force-include]
"py7zz/bin" = "py7zz/bin"

[project]
name = "py7zz"
dynamic = ["version"]
description = "Python wrapper for 7zz CLI tool providing cross-platform compression with 50+ archive formats"
readme = "README.md"
license = {text = "BSD-3-Clause AND LGPL-2.1-only"}
requires-python = ">=3.8"
authors = [
    {name = "py7zz contributors"},
]
keywords = ["7zip", "compression", "archive", "7z"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "packaging>=25.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
py7zz = "py7zz.cli:main"

[project.urls]
Homepage = "https://github.com/rxchi1d/py7zz"
Issues = "https://github.com/rxchi1d/py7zz/issues"
Repository = "https://github.com/rxchi1d/py7zz"

[tool.ruff]
line-length = 88  # Industry standard (Black's default)
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]  # Added comprehensions and simplify rules
ignore = ["E501"]  # Let formatter handle line length

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*.py" = ["B011"]  # Allow assert statements in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
show_error_codes = true  # Show error codes for easier debugging
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0.2",
    "ruff>=0.12.3",
    "twine>=6.1.0",
    "types-requests>=2.32.0.20241016",
    "zstandard>=0.23.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
git_describe_command = "git describe --tags --match='v*'"
local_scheme = "no-local-version"
